--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3028,6 +3028,10 @@ html {
 .relative {
   position: relative;
 }
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
 .inset-0 {
   top: 0px;
   right: 0px;
@@ -3201,6 +3205,37 @@ html {
 .h-full {
   height: 100%;
 }
+.max-h-min {
+  max-height: -webkit-min-content;
+  max-height: -moz-min-content;
+  max-height: min-content;
+}
+.max-h-96 {
+  max-height: 24rem;
+}
+.max-h-\[60\%\] {
+  max-height: 60%;
+}
+.max-h-\[50\%\] {
+  max-height: 50%;
+}
+.max-h-screen {
+  max-height: 100vh;
+}
+.max-h-fit {
+  max-height: -webkit-fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+.max-h-full {
+  max-height: 100%;
+}
+.max-h-\[32rem\] {
+  max-height: 32rem;
+}
+.max-h-\[30rem\] {
+  max-height: 30rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -3269,6 +3304,9 @@ html {
 }
 .max-w-full {
   max-width: 100%;
+}
+.max-w-screen-md {
+  max-width: 768px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -3432,6 +3470,9 @@ html {
 }
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 .truncate {
   overflow: hidden;
